# SerialLibrary

./: CMakeLists.txt
include/serial/: serial.h
include/serial/impl/: unix.h  win.h
src/: serial.cpp
src/impl/: unix.cpp  win.cpp
